--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -2,7 +2,7 @@ name: Frequent Automation
 
 on:
   schedule:
-    - cron: '0 0,4,8,12,16 * * *'  # Runs at 00:00, 04:00, 08:00, 12:00, 16:00 UTC daily
+    - cron: '0 0,4,8,11,12,16 * * *'  # Runs at 00:00, 04:00, 08:00, 11:00, 12:00, 16:00 UTC daily
   workflow_dispatch:
 
 jobs:
