--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ sentence-transformers==5.1.0
 nltk==3.9.1
 spacy==3.7.2
 scikit-learn==1.5.2
-torch==2.8.0+cpu
+torch==2.8.0
 faiss-cpu==1.7.4
 tf-keras==2.19.0
 
