--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -18,13 +18,17 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install minimal dependencies for prayer times
+      - name: Install minimal dependencies for render automation
         run: |
-          pip install requests
+          pip install fastapi uvicorn pydantic pydantic-settings email-validator python-dotenv python-multipart sqlalchemy alembic psycopg2-binary redis requests beautifulsoup4 scrapy selenium pandas numpy transformers sentence-transformers nltk spacy scikit-learn torch faiss-cpu pyarabic arabic-reshaper python-bidi python-jose[cryptography] passlib[bcrypt] bcrypt websockets aioredis celery prometheus-client structlog python-slugify dateparser
 
-      - name: Update prayer times
+      - name: Ensure data directory exists
         run: |
-          python scripts/update_prayer_times.py
+          mkdir -p data
+
+      - name: Run render daily automation
+        run: |
+          python render_daily_automation.py
 
       - name: Send email notification
         if: always()
