--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -22,6 +22,16 @@ jobs:
         run: |
           pip install fastapi uvicorn pydantic pydantic-settings email-validator python-dotenv python-multipart sqlalchemy alembic psycopg2-binary redis requests beautifulsoup4 scrapy selenium pandas numpy transformers sentence-transformers nltk spacy scikit-learn torch faiss-cpu pyarabic arabic-reshaper python-bidi python-jose[cryptography] passlib[bcrypt] bcrypt websockets aioredis celery prometheus-client structlog python-slugify dateparser schedule aiohttp
 
+
+      - name: Set up Git user
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+
+      - name: Set up authentication for pushing
+        run: |
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+
       - name: Ensure data directory exists
         run: |
           mkdir -p data
