--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -18,19 +18,20 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install minimal dependencies for render automation
+
+      - name: Install dependencies for prayer times and file updates
         run: |
-          pip install fastapi uvicorn pydantic pydantic-settings email-validator python-dotenv python-multipart sqlalchemy alembic psycopg2-binary redis requests beautifulsoup4 scrapy selenium pandas numpy transformers sentence-transformers nltk spacy scikit-learn torch faiss-cpu pyarabic arabic-reshaper python-bidi python-jose[cryptography] passlib[bcrypt] bcrypt websockets aioredis celery prometheus-client structlog python-slugify dateparser schedule aiohttp
+          pip install requests
 
 
       - name: Set up Git user
         run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
+          git config --global user.email "munirmohammed038@gmail.com"
+          git config --global user.name "Munir Mohammed"
 
-      - name: Set up authentication for pushing
+      - name: Set up authentication for pushing (your PAT)
         run: |
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
 
       - name: Ensure data directory exists
         run: |
