--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -2,8 +2,7 @@ name: Frequent Automation
 
 on:
   schedule:
-    - cron: '11 11 * * *'  # Runs at 11:11 UTC (for immediate test)
-    - cron: '0 0,4,8,11,12,16 * * *'  # Regular schedule
+    - cron: '0 0,4,8,12,16 * * *'  # Regular schedule
   workflow_dispatch:
 
 jobs:
@@ -21,7 +20,7 @@ jobs:
 
       - name: Install dependencies for prayer times and file updates
         run: |
-          pip install requests
+          pip install requests schedule
 
 
       - name: Set up Git user
